# databricks-MCP-demo

./: .gitignore  databricks_assistant.py  databricks_langgraph_agent.py  pyproject.toml  requirements.txt  test_connection.py  test_mcp_connection.py
src/dbx_mcp_demo/: cli.py  clients.py  config.py  endpoints.py  langgraph_agent.py  mcp_tools.py  report.py  sql_guardrails.py
tests/: test_config.py  test_endpoints.py  test_report.py  test_sql_guardrails.py
