[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-mcp-demo"
version = "0.1.0"
description = "Databricks MCP demo and capability lab"
requires-python = ">=3.10"
dependencies = [
  "databricks-sdk",
  "databricks-mcp",
  "python-dotenv",
  "langgraph",
  "langchain-core",
  "langchain-anthropic",
  "typing-extensions",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
